certificates styling on mobile fixed

--- a/app/styles/mixins/common-tables-mixin.scss
+++ b/app/styles/mixins/common-tables-mixin.scss
@@ -30,6 +30,9 @@ td {
       tr {
         td {
           text-align: center;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden;
         }
       }
     }
